<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="csaper6.michelwu.quizapp2.MakeQuestions">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_make_question_back_button"
        android:id="@+id/activity_make_question_back_button"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:onClick="activity_make_question_back_button_clicked"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_make_question_done_button"
        android:id="@+id/activity_make_question_done_button"
        android:layout_toEndOf="@+id/activity_make_question_back_button"
        android:onClick="activity_make_question_done_button_clicked"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_make_question_more_button"
        android:id="@+id/activity_make_question_more_button"
        android:layout_alignTop="@+id/activity_make_question_done_button"
        android:layout_toEndOf="@+id/activity_make_question_done_button"
        android:onClick="activity_make_question_more_button_clicked"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/activity_make_question_back_button"
        android:layout_alignParentStart="true"
        android:id="@+id/activity_make_question_vertical_linearlayout"></LinearLayout>

</RelativeLayout>
